antlr/gen/PslParser.py
# Generated from Psl.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PslParser ( Parser ):

    grammarFileName = "Psl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'='", "'('", "','", "')'", "'['", 
                     "']'", "'@'", "'inner'", "'sync'", "'scoped'", "'static'", 
                     "'atomic'", "'<'", "'>'", "'{'", "'}'", "'as'", "'->'", 
                     "';'", "'null'", "'true'", "'false'", "'f'", "'+'", 
                     "'-'", "'i'", "'any'", "'number'", "'string'", "'bool'", 
                     "'functor'", "'block'", "'int'", "'real'", "'complex'", 
                     "'array'", "'matrix'", "'list'", "'dict'", "'?'", "'let'", 
                     "'use'", "'func'", "'type'", "'enum'", "'with'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LET", "USE", "FUNC", "TYPE", 
                      "ENUM", "WITH", "RETURN", "SKIP_", "LINE_END", "MULTI_STR", 
                      "IDENTIFIER", "UNIT", "STRING", "INTEGER", "REAL", 
                      "DECIMAL_INTEGER" ]

    RULE_program = 0
    RULE_stmtList = 1
    RULE_stmt = 2
    RULE_letStmt = 3
    RULE_useStmt = 4
    RULE_withDef = 5
    RULE_funcDef = 6
    RULE_typeDef = 7
    RULE_enumDef = 8
    RULE_retStmt = 9
    RULE_exprStmt = 10
    RULE_carrier = 11
    RULE_biasAnno = 12
    RULE_sizeAnno = 13
    RULE_annotation = 14
    RULE_annotations = 15
    RULE_modifiers = 16
    RULE_withList = 17
    RULE_withDecl = 18
    RULE_paramDef = 19
    RULE_argument = 20
    RULE_typePack = 21
    RULE_keyValDecl = 22
    RULE_keyValExpr = 23
    RULE_entityRef = 24
    RULE_listUnpack = 25
    RULE_dictUnpack = 26
    RULE_dictPack = 27
    RULE_listPack = 28
    RULE_stmtPack = 29
    RULE_entityExpr = 30
    RULE_entityChain = 31
    RULE_chainUnit = 32
    RULE_entity = 33
    RULE_linkCall = 34
    RULE_functorRef = 35
    RULE_stmtEnd = 36
    RULE_sepMark = 37
    RULE_argsList = 38
    RULE_literal = 39
    RULE_value = 40
    RULE_formatStr = 41
    RULE_complex = 42
    RULE_type = 43
    RULE_innerType = 44
    RULE_numberType = 45
    RULE_scalarType = 46
    RULE_vectorType = 47
    RULE_structType = 48
    RULE_nullableType = 49
    RULE_identRef = 50

    ruleNames =  [ "program", "stmtList", "stmt", "letStmt", "useStmt", 
                   "withDef", "funcDef", "typeDef", "enumDef", "retStmt", 
                   "exprStmt", "carrier", "biasAnno", "sizeAnno", "annotation", 
                   "annotations", "modifiers", "withList", "withDecl", "paramDef", 
                   "argument", "typePack", "keyValDecl", "keyValExpr", "entityRef", 
                   "listUnpack", "dictUnpack", "dictPack", "listPack", "stmtPack", 
                   "entityExpr", "entityChain", "chainUnit", "entity", "linkCall", 
                   "functorRef", "stmtEnd", "sepMark", "argsList", "literal", 
                   "value", "formatStr", "complex", "type", "innerType", 
                   "numberType", "scalarType", "vectorType", "structType", 
                   "nullableType", "identRef" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    LET=42
    USE=43
    FUNC=44
    TYPE=45
    ENUM=46
    WITH=47
    RETURN=48
    SKIP_=49
    LINE_END=50
    MULTI_STR=51
    IDENTIFIER=52
    UNIT=53
    STRING=54
    INTEGER=55
    REAL=56
    DECIMAL_INTEGER=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtList(self):
            return self.getTypedRuleContext(PslParser.StmtListContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PslParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 134540640852721472) != 0):
                self.state = 102
                self.stmtList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PslParser.StmtContext)
            else:
                return self.getTypedRuleContext(PslParser.StmtContext,i)


        def sepMark(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PslParser.SepMarkContext)
            else:
                return self.getTypedRuleContext(PslParser.SepMarkContext,i)


        def getRuleIndex(self):
            return PslParser.RULE_stmtList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtList" ):
                listener.enterStmtList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtList" ):
                listener.exitStmtList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = PslParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==50:
                        self.state = 105
                        self.sepMark()


                    self.state = 108
                    self.stmt()

                else:
                    raise NoViableAltException(self)
                self.state = 111 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStmt(self):
            return self.getTypedRuleContext(PslParser.LetStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(PslParser.UseStmtContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(PslParser.FuncDefContext,0)


        def typeDef(self):
            return self.getTypedRuleContext(PslParser.TypeDefContext,0)


        def enumDef(self):
            return self.getTypedRuleContext(PslParser.EnumDefContext,0)


        def retStmt(self):
            return self.getTypedRuleContext(PslParser.RetStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(PslParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PslParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.letStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.useStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.funcDef()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.typeDef()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.enumDef()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.retStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 119
                self.exprStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(PslParser.LET, 0)

        def carrier(self):
            return self.getTypedRuleContext(PslParser.CarrierContext,0)


        def entityExpr(self):
            return self.getTypedRuleContext(PslParser.EntityExprContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def type_(self):
            return self.getTypedRuleContext(PslParser.TypeContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStmt" ):
                return visitor.visitLetStmt(self)
            else:
                return visitor.visitChildren(self)




    def letStmt(self):

        localctx = PslParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_letStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PslParser.LET)
            self.state = 123
            self.carrier()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 124
                self.match(PslParser.T__0)
                self.state = 125
                self.type_()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 128
                self.match(PslParser.T__1)


            self.state = 131
            self.entityExpr()
            self.state = 132
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(PslParser.USE, 0)

        def carrier(self):
            return self.getTypedRuleContext(PslParser.CarrierContext,0)


        def entityExpr(self):
            return self.getTypedRuleContext(PslParser.EntityExprContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_useStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseStmt" ):
                listener.enterUseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseStmt" ):
                listener.exitUseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = PslParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_useStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(PslParser.USE)
            self.state = 135
            self.carrier()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 136
                self.match(PslParser.T__1)


            self.state = 139
            self.entityExpr()
            self.state = 140
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(PslParser.WITH, 0)

        def identRef(self):
            return self.getTypedRuleContext(PslParser.IdentRefContext,0)


        def withDecl(self):
            return self.getTypedRuleContext(PslParser.WithDeclContext,0)


        def LINE_END(self):
            return self.getToken(PslParser.LINE_END, 0)

        def getRuleIndex(self):
            return PslParser.RULE_withDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithDef" ):
                listener.enterWithDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithDef" ):
                listener.exitWithDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithDef" ):
                return visitor.visitWithDef(self)
            else:
                return visitor.visitChildren(self)




    def withDef(self):

        localctx = PslParser.WithDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_withDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(PslParser.WITH)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.state = 143
                self.identRef()
                pass
            elif token in [14]:
                self.state = 144
                self.withDecl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 147
                self.match(PslParser.LINE_END)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def annotations(self):
            return self.getTypedRuleContext(PslParser.AnnotationsContext,0)


        def modifiers(self):
            return self.getTypedRuleContext(PslParser.ModifiersContext,0)


        def FUNC(self):
            return self.getToken(PslParser.FUNC, 0)

        def identRef(self):
            return self.getTypedRuleContext(PslParser.IdentRefContext,0)


        def paramDef(self):
            return self.getTypedRuleContext(PslParser.ParamDefContext,0)


        def stmtPack(self):
            return self.getTypedRuleContext(PslParser.StmtPackContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def withDef(self):
            return self.getTypedRuleContext(PslParser.WithDefContext,0)


        def type_(self):
            return self.getTypedRuleContext(PslParser.TypeContext,0)


        def LINE_END(self):
            return self.getToken(PslParser.LINE_END, 0)

        def getRuleIndex(self):
            return PslParser.RULE_funcDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)




    def funcDef(self):

        localctx = PslParser.FuncDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.annotations()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 151
                self.withDef()


            self.state = 154
            self.modifiers()
            self.state = 155
            self.match(PslParser.FUNC)
            self.state = 156
            self.identRef()
            self.state = 157
            self.paramDef()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 158
                self.match(PslParser.T__0)
                self.state = 159
                self.type_()


            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 162
                self.match(PslParser.T__1)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==50:
                self.state = 165
                self.match(PslParser.LINE_END)


            self.state = 168
            self.stmtPack()
            self.state = 169
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(PslParser.TYPE, 0)

        def identRef(self):
            return self.getTypedRuleContext(PslParser.IdentRefContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def type_(self):
            return self.getTypedRuleContext(PslParser.TypeContext,0)


        def typePack(self):
            return self.getTypedRuleContext(PslParser.TypePackContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_typeDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDef" ):
                listener.enterTypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDef" ):
                listener.exitTypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDef" ):
                return visitor.visitTypeDef(self)
            else:
                return visitor.visitChildren(self)




    def typeDef(self):

        localctx = PslParser.TypeDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(PslParser.TYPE)
            self.state = 172
            self.identRef()
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 173
                self.match(PslParser.T__1)


            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 52]:
                self.state = 176
                self.type_()
                pass
            elif token in [16]:
                self.state = 177
                self.typePack()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 180
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(PslParser.ENUM, 0)

        def identRef(self):
            return self.getTypedRuleContext(PslParser.IdentRefContext,0)


        def dictUnpack(self):
            return self.getTypedRuleContext(PslParser.DictUnpackContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_enumDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumDef" ):
                listener.enterEnumDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumDef" ):
                listener.exitEnumDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumDef" ):
                return visitor.visitEnumDef(self)
            else:
                return visitor.visitChildren(self)




    def enumDef(self):

        localctx = PslParser.EnumDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enumDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(PslParser.ENUM)
            self.state = 183
            self.identRef()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 184
                self.match(PslParser.T__1)


            self.state = 187
            self.dictUnpack()
            self.state = 188
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PslParser.RETURN, 0)

        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def entityExpr(self):
            return self.getTypedRuleContext(PslParser.EntityExprContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_retStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetStmt" ):
                listener.enterRetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetStmt" ):
                listener.exitRetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetStmt" ):
                return visitor.visitRetStmt(self)
            else:
                return visitor.visitChildren(self)




    def retStmt(self):

        localctx = PslParser.RetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_retStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(PslParser.RETURN)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 132856189038952512) != 0):
                self.state = 191
                self.entityExpr()


            self.state = 194
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def annotations(self):
            return self.getTypedRuleContext(PslParser.AnnotationsContext,0)


        def entityExpr(self):
            return self.getTypedRuleContext(PslParser.EntityExprContext,0)


        def stmtEnd(self):
            return self.getTypedRuleContext(PslParser.StmtEndContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = PslParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.annotations()
            self.state = 197
            self.entityExpr()
            self.state = 198
            self.stmtEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CarrierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityRef(self):
            return self.getTypedRuleContext(PslParser.EntityRefContext,0)


        def listUnpack(self):
            return self.getTypedRuleContext(PslParser.ListUnpackContext,0)


        def dictUnpack(self):
            return self.getTypedRuleContext(PslParser.DictUnpackContext,0)


        def getRuleIndex(self):
            return PslParser.RULE_carrier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarrier" ):
                listener.enterCarrier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarrier" ):
                listener.exitCarrier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCarrier" ):
                return visitor.visitCarrier(self)
            else:
                return visitor.visitChildren(self)




    def carrier(self):

        localctx = PslParser.CarrierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_carrier)
        try:
            self.state = 203
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.entityRef()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.listUnpack()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 202
                self.dictUnpack()
                pass
            else:
                raise NoViableAltException(self)
